# ChangeLog for sys-devel/llvm
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-devel/llvm/ChangeLog,v 1.171 2014/01/10 17:29:43 mgorny Exp $

  10 Jan 2014; Michał Górny <mgorny@gentoo.org> llvm-3.4.ebuild,
  llvm-9999.ebuild:
  Restore building clang-check and clang-format, bug #497620.

  10 Jan 2014; Michał Górny <mgorny@gentoo.org> llvm-3.4.ebuild:
  Re-add missing runtime gcc detection patch, bug #497704.

  08 Jan 2014; Michał Górny <mgorny@gentoo.org> llvm-3.4.ebuild,
  llvm-9999.ebuild:
  Build extra clang tools, bug #497428.

  08 Jan 2014; Bernard Cafarelli <voyageur@gentoo.org> llvm-3.4.ebuild,
  +files/llvm-3.4-fix_varargs.patch:
  Fix a varargs bug causing miscompilations, thanks Holger Hoffstätte
  <holger.hoffstaette@googlemail.com> in bug #497298

  06 Jan 2014; Michał Górny <mgorny@gentoo.org> llvm-9999.ebuild:
  Add a PDEP on sys-devel/clang to the live ebuild as well.

*llvm-3.4 (06 Jan 2014)

  06 Jan 2014; Michał Górny <mgorny@gentoo.org> +llvm-3.4.ebuild:
  Version bump.

*llvm-3.3-r3 (06 Jan 2014)

  06 Jan 2014; Michał Górny <mgorny@gentoo.org>
  +files/llvm-3.3-cmake-modulepath.patch, +llvm-3.3-r3.ebuild,
  -llvm-3.3-r2.ebuild:
  Restore missing patches for 3.3. Add a patch for CMake wrt bug #496480.

  30 Dec 2013; Michał Górny <mgorny@gentoo.org> llvm-3.3-r2.ebuild:
  Fix building docs with USE=-clang, bug #496394.

  29 Dec 2013; Michał Górny <mgorny@gentoo.org> llvm-3.3-r2.ebuild,
  llvm-9999.ebuild:
  Explicitly require Makefiles from CMake, to avoid failures when people like to
  enable ninja globally. Bug #496426.

  28 Dec 2013; Michał Górny <mgorny@gentoo.org> llvm-3.3-r2.ebuild:
  Fix building R600 target, bug #496308.

  28 Dec 2013; Michał Górny <mgorny@gentoo.org> llvm-3.3-r2.ebuild:
  Fix clang blocker to match 3.3-r100.

*llvm-3.3-r2 (28 Dec 2013)

  28 Dec 2013; Michał Górny <mgorny@gentoo.org>
  +files/llvm-3.3-r2-gentoo-install.patch, +llvm-3.3-r2.ebuild: