@@ -55,26 +55,26 @@ EBUILD llvm-3.2.ebuild 6534 SHA256 eb16cc91887fdb035722d268caaa3e4843825403786fc
 EBUILD llvm-3.3-r1.ebuild 12007 SHA256 343a88ba35b67f4d86c20e29e1f4919640a9c4fbf9942fb1733945480ba1e8f5 SHA512 3db9e2ad26e803ac663b696ff615eed83a4342e4b771f161b74304bb83c61f171e02f2b176cf62663724206a57e20be52ec22cf49de234f72b32673bb2588512 WHIRLPOOL 1c423485f6161b40daa5a7ebdc38838b4bd2d6a9c540881eb3cfbf5f592b454da32758ad23c2607fe7a875c65891f7b64f3079a53ac77af5b2decb6490a6b8b4
 EBUILD llvm-3.3-r3.ebuild 14232 SHA256 c93cc4b5d2f0b52fe3b61a024c192844cc7f5874ab0e620960d59aa16314dab6 SHA512 26ea2f5751cfd1c0acfffc910b3ff75fc8143acb8dc30f53e23e875d88a7e7e8a66af2eb9ec1df64e8d95615e973f84cf04a34a4deabc7121924d1837f27a2e1 WHIRLPOOL d784b48a07172fb1f8044b90ada8b24aee81655fec7fe7dc1f5e4ba1a69795f9cb522094de617712feefefecb242ab67afbeabce8e59bb27876ee91e890d2f2d
 EBUILD llvm-3.3.ebuild 6798 SHA256 4e53042e76ce97e6a460cda74c5dbadc1cee9009345e8f0232e28d53c8f77579 SHA512 5513887c3b5a25a678713b68c216a40801ddecbf5a4dc58d7ad01c1ec8411589e20d8662c34f117e6d64924302504c8ce74b48f3edca1f292b56881eb6176271 WHIRLPOOL 79d6adefc281699477a271f76cb8eb7992d0946b6fcda9149a0976c30138ac882f735eff08c25c0edf37ccc8e31700f6d2d51d38c354c82c06695962e8f9243b
-EBUILD llvm-3.4.ebuild 14749 SHA256 02434d0432547fc53820b3127a145c359a6f149eee2956a9a8b2d7415a0df646 SHA512 76bb2592c82a1b9799d4337d3ed7b7e93eb454c89b5e548ad91b328585b57a32b4ec06730ca189a764f70a76c8a91c8306c862402e58da612fce3cf3308927c7 WHIRLPOOL 0d41764f462e83eaf2bc5d167477e2a5d63d4efcd2b9d6a00caa18f33d9193ab17cc35d1700bdc1e92a523f61bf3a150df3a0d509415ee1175eba54539013121
-EBUILD llvm-9999.ebuild 13885 SHA256 4b95091e31762220d999652ccecb9c90510989b43f162ab2b770b7c8a3e21052 SHA512 967c2dbd09e05b1cb1479b99b63b1b1e9d676abcfcbcfd4f8a20536f612d9696de0e03f1ac63a15b952a7e06a83428cba6195cc09eb79c0ea6ddb68cfba39633 WHIRLPOOL 5890ac706989c603c32cffa690734ac87ff79099bddf99a3244e11ff434bbe56e3880f1d8d475381a6e334520c6838f98e834a7ca482bf2e6a37af40fd64c7a9
-MISC ChangeLog 28663 SHA256 394ad6f313fae867337df77209f6d7beb8080af0aab766a7fe58178ff781bf23 SHA512 b807a9f0a6461f4900aa8aae3111c78da2982b1fb6aa8a81ab629d695d92b699b07606912486fbefc8417d72347060a40d8a893dd9dcb6eab90c68b11545505e WHIRLPOOL 201f975dfe60ba3bb01731d565a86afdec8415ddd7473036f61ce638e460bdf79911ad211ef72f6ef2658ff7aea59ee1dd85bfd37958c94c2ae50cd656ceeb41
+EBUILD llvm-3.4.ebuild 14798 SHA256 ce700135ace0570118830039078e7f20a0ce4b725ddc32aeb0b2276ea21d2830 SHA512 06a48c5e8418d08bf0a9ae0ec78e589a17b4179ef783d5318f2f21036f35f55edfa8a3dd78083bb1153aa1346682176a991bb485bcc29bd7fd8c1687b244ca8e WHIRLPOOL 09b05e9e45ff79b605f7e06dc7c0a38db1993f5b7f9693fe4d4569babacced95fe54300ab8edbb72b077b9e148d98c63385538b0a0ed1d7a87abd658287c6500
+EBUILD llvm-9999.ebuild 13934 SHA256 49094ebb03476aea95b1aecb1b63fcbc89bb4af53c0ce16a6000bffa57f5ecca SHA512 90f97213478201c252476ecc84a5cf8b9cd9911067c0b1a54eba31210727cb1696f04c86134f570de2e7eca9c54baf264154a7de0df4acfc382fbdf916ac3019 WHIRLPOOL 1d44dc352bb243b484575b4651fc58ef7e394742a7c8e74ea54b4aa46800b795ef50530da5db340fb36c9d847a222e041bbfff907d38b241d10f74b453d91275
+MISC ChangeLog 28867 SHA256 a5a34281ca85191fbdbcfb6003fcf3d77135054355dfceb95de26a235139f181 SHA512 bfff745530d1c990d769c9ad668e6852da7552a67b460fb72e5b565dc82106504a0ca3e6afb9f179bc91f616d272e6b2d9c0bd0a30e58203ca2a263cba27bb88 WHIRLPOOL 320cd5b714c9983b9d360566ada60d443af27aeb6fffd649989ce19bf27a3030c7fd212d32099e0c1d690de568f97db0ece87b8647ba5afe02fd909d311a28e5
 MISC metadata.xml 2723 SHA256 d1bbe72da2553592ad60522f744b8339bce17487343abf372d966c1fe9cd163d SHA512 800f72039a5f0fdb175a8ddab7ae8f184907865802ffd5f139006f3a8c77053f114e2f7b01cef3f41f6fffb3f8f8b2b474fdf95461f27b2dc8ae31cbd732a14e WHIRLPOOL 462d3d2f22e29d3678621a9f89ed98a58ee60fde57da7be21fbca7fd61e106abbcb19c0e491424869302c19ca93b15c480cd7ca2a3181f2148174d44e891e190
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQJ8BAEBCABmBQJS0C4LXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+iQJ8BAEBCABmBQJS1s6TXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
 ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ2REJCMDdDQzRGMERBRDA2RUEwQUZFNDFC
-MDdBMUFFQUVGQjQ0NjRFAAoJELB6GurvtEZOlo4P/2aS9NvXxtqWQUPDwiMjjeMd
-D9feq+Yx+2FI5FmEGkhYCiMa1jMqclIBotgukfOU6WYvFbKwUinAKUI0LnKHIr0S
-dWsw1ruYjPa1xbsrUxGAj0GZnFGNnebcB/hgmZ/K6p3Uk04/nP3M0izdcC8xCHQo
-toqpxHU0n8SdmTV3diNd46wpfyBzJ1pHE/UHxDkz5LNELQrlGBvZgU8hwwvgFwK2
-o//WvLEOi0gmwqRfakCbs9VdwE5ZC1TixB26G7m1T5L0W71o65TckGi7X6NdL+SE
-wq8ZGc8Lencvp1ZDfed4oWUCG8J9Vh34ZEQTB3Uz73jIZXITPEnRSqZWNZ2lRELS
-E5XiG3jlHliPTu2KisAXDwE5uJi6LfHvPu57PB0fSpWqs6Qx7Oi+jH9y4x/SaPv+
-Jl36ZGOIhaQoH0FRvY3qZez+wlcXCUc0dJduelhLzDEzvbaL8qZbIbjrdFn04uP7
-3A2+J6qq4p+GI9UPWR0soqy8mdSsSw4TXnYcThrUivtJ6HUf2DViG3qRCIDk3y3j
-RMza1Ypgg+0TkL8e/Iuy16TsCowmn7BHgGmJY6w8K2Z+03ExW//Mj/s6PMFZMVdm
-82lyrngD4uJ0MaXDBmolBDhU947O0l5geIlKKQGGSYPfuuMS8UNj431WKSYctN6c
-p5KjF58tejbkBGwkKAGe
-=l2l3
+MDdBMUFFQUVGQjQ0NjRFAAoJELB6GurvtEZOSSgQAJvXrhXBG5jU6fo/77O7mrGt
+zszl78vQyMY8ppL+Os33Zh2vBORJqWkEykWvooBYe7Q+owiBt1Eyp0aMDOlr7UOV
+FITi3WdOsIuEp0WeFZ8M6dT8tmay/pfPC7q70+JH7gCXH2PKoB3oGK/Q2LEK/vpH
+ittNPTE3DH12Ei8rVRXNx8wDSap0rwoGIo9cdmDWC0h652JbAX9ZqEij/9iABm4S
+ZUhhUUPgorsqkJ5e5LApeWAbuLbPpf0SQvVv+cxR73gJONvC5g5ThtFK0B7ipd59
+UnlZSeDoffZbSj129jEjdUdDpGo8pRFaxZplJn7DyT6n3tbB/YrPysvU189N27ED
+C7MlLJkWnPDFk8nM923+uKY+8Y23XWpDa1GCU1FTbtH6S4rncOsO+4FUXBUlRRlC
+Wm4BXXFXkdlwX5PnnyTutPV69JnFW02s8IRdVL5fvvHvRmNw+GNg20Uq358ysAb4
+0Ie06uHYBgkmEGLZgKaLXxGcwRf/f8azDkFE26Gf4SBn4sXGPlWVXHWVYSK4pVLH
+SbSxavUu9s2fj+CxYaWwoc6R/D5+aQn9BibYtGmmVCZoobfGB3Oh+yMjDC7B0G0o
+DR+6aCwr3BEE7P4mpUEgqB7Ca+l10FT89w900B6Zj8Rh4o9PxAXHwQ0sLJmqskSd
+VRrj/oilrfH6V4K4R8F/
+=3MUt
 -----END PGP SIGNATURE-----
