@@ -1,6 +1,6 @@
 # Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sys-devel/llvm/llvm-3.4.ebuild,v 1.5 2014/01/10 17:29:43 mgorny Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-devel/llvm/llvm-3.4.ebuild,v 1.6 2014/01/15 18:08:11 mgorny Exp $
 
 EAPI=5
 
@@ -361,6 +361,8 @@ multilib_src_test() {
 	pax-mark m unittests/ExecutionEngine/MCJIT/Release/MCJITTests
 	pax-mark m unittests/Support/Release/SupportTests
 
+	# respect TMPDIR!
+	local -x LIT_PRESERVES_TMP=1
 	emake "${MAKEARGS[@]}" check
 	use clang && emake "${MAKEARGS[@]}" -C tools/clang test
 }
